fixed an issue with the displayed code so that it coppies correctly. Also made sure that the option for clicking to copy to clip board was more visible and coppies correct code

--- a/src/Tools/email-list-checker/email-list-checker.css
+++ b/src/Tools/email-list-checker/email-list-checker.css
@@ -22,6 +22,15 @@
         float: left;
     }
 }
+.code-copied-message{
+    color: #fff;
+    background-color: #1eb6a9;
+    padding: 5px;
+    border-radius: 5px;
+    text-align: center;
+    margin-bottom: 10px;
+    cursor: pointer;
+}
 .code-display{
     margin: unset;
     white-space: unset;
